fix: layout and gap

--- a/src/components/Verse/TranslationFeedback/TranslationFeedbackAction.module.scss
+++ b/src/components/Verse/TranslationFeedback/TranslationFeedbackAction.module.scss
@@ -12,6 +12,7 @@
 }
 
 .overlay {
+  scrollbar-gutter: stable both-edges;
   @include breakpoints.smallerThanTablet {
     place-items: end;
   }
@@ -19,6 +20,7 @@
 
 .content {
   max-inline-size: constants.$translation-feedback-modal-max-width;
+  overflow-y: auto;
 
   @include breakpoints.smallerThanTablet {
     block-size: auto;
